samainīju head un pievienoju h1, h2, h3

--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>mahtecreate</title>
 <script src="elvira.js"></script>
-<title>mahte create</title>
 <link rel="stylesheet" href="elvira.css">
 </head>
 <body>
 <h1>mahte create</h1>
+<h2>
 <p>Es esmu Elvīra</p>
 <p id="demo">Te es rakstu savu stāstu</p>
-<button id="poga" type="button" onclick="myFunction()">Uzzināt vairāk par mani</buttton>
-</body>
-
-<!DOCTYPE html>
-<html>
-<head>
+<button id="poga" type="button" onclick="myFunction()">Uzzināt vairāk par mani</button>
+</h2>
+<h3>
   <title></title>
   <style>
   html, body {
@@ -32,8 +30,8 @@
     border: 1px solid white;
   }
   </style>
-</head>
-<body>
+
+
 <canvas width="400" height="400" id="game"></canvas>
 <script>
 var canvas = document.getElementById('game');
@@ -162,6 +160,6 @@ document.addEventListener('keydown', function(e) {
 // start the game
 requestAnimationFrame(loop);
 </script>
+</h3>
 </body>
-</html>
 </html>
