--- a/index.html
+++ b/index.html
@@ -4,6 +4,36 @@
 <title>mahtecreate</title>
 <script src="elvira.js"></script>
 <link rel="stylesheet" href="elvira.css">
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <style type="text/css">
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
+        height: 100%;
+      }
+
+      /* Optional: Makes the sample page fill the window. */
+      html,
+      body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+	<!-- https://developers.google.com/maps/documentation/javascript/styling  mapTypeId: 'hybrid', -->
+    <script>
+      let map;
+
+      function initMap() {
+        map = new google.maps.Map(document.getElementById("map"), {
+          center: { lat: 57.132639, lng: 23.474591 },
+		  mapTypeId: 'hybrid',
+          zoom: 11,
+		  mapId: '138279c12c63d0d5'
+        });
+		map.setTilt(45);
+      }
+    </script>
 </head>
 <body>
 <h1>mahte create</h1>
@@ -143,18 +173,12 @@ document.addEventListener('keydown', function(e) {
 requestAnimationFrame(loop);
 </script>
 </h3>
-  <script>
-      let map;
+ <div id="map"></div>
 
-      function initMap() {
-        map = new google.maps.Map(document.getElementById("map"), {
-          center: { lat: 57.132639, lng: 23.474591 },
-		  mapTypeId: 'hybrid',
-          zoom: 11,
-		  mapId: '138279c12c63d0d5'
-        });
-		map.setTilt(45);
-      }
-    </script>
+    <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA0muCEV_a3w5E2YAKBc6C-mXuMzH8eM14&callback=initMap&libraries=&v=weekly"
+      async
+    ></script>
 </body>
 </html>
