--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ body, html {
   <p>Radoša personība, kas aizrāvusies ar keramiku. Keramika ir mana ikdiena, patīk radīt un nodot šo radīšanas prieku arī citiem. Kad keramika dara savu, un plīst šķīvji es pievēršos tehnoloģijām un radu lietas no koka. Vakarā, lai relaksētos top super mini adīts zvērudārzs. To visu man patīk fotogrofēt un iepriecināt citus ar visādām radošām lietām.</p>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
-      <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br>
+      <p><b><i class="fa fa-user w3-margin-right"></i>Elvīra</b></p><br>
       <img src="/w3images/avatar_hat.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
     </div>
 
