--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ body, html {
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">PAR MANI</h3>
-  <p class="w3-center"><em>keramika</em></p>
+  <p class="w3-center"><em>radīšanas prieks...</em></p>
   <p>Radoša personība, kas aizrāvusies ar keramiku. Keramika ir mana ikdiena, patīk radīt un nodot šo radīšanas prieku arī citiem. Kad keramika dara savu, un plīst šķīvji es pievēršos tehnoloģijām un radu lietas no koka. Vakarā, lai relaksētos top super mini adīts zvērudārzs. To visu man patīk fotogrofēt un iepriecināt citus ar visādām radošām lietām.</p>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
